--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,6 +7,36 @@
     android:background="@color/gui00"
     tools:context=".MainActivity">
 
+
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="40dp"
+        android:paddingHorizontal="20dp"
+        app:layout_constraintTop_toBottomOf="@+id/textView"
+        tools:layout_editor_absoluteX="0dp">
+
+        <!-- Left TextView -->
+        <TextView
+            android:textColor="@color/gui02"
+            android:id="@+id/guess"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textSize="20sp"
+            android:layout_alignParentStart="true"
+            android:text="" />
+
+        <!-- Right TextView -->
+        <TextView
+            android:textColor="@color/gui02"
+            android:id="@+id/check"
+            android:layout_width="wrap_content"
+            android:textSize="20sp"
+            android:layout_height="wrap_content"
+            android:layout_alignParentEnd="true"
+            android:text="" />
+    </RelativeLayout>
+
     <TextView
         android:id="@+id/textView"
         android:layout_width="wrap_content"
@@ -22,7 +52,7 @@
         app:layout_constraintHorizontal_bias="0.497"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.07" />
+        app:layout_constraintVertical_bias="0.05" />
 
     <LinearLayout
         android:id="@+id/linearLayout"
@@ -31,17 +61,8 @@
         android:orientation="horizontal"
         app:layout_constraintBottom_toBottomOf="parent">
 
-        <!-- Button on the left side -->
-        <Button
-            android:id="@+id/button"
-            android:layout_width="wrap_content"
-            android:layout_height="60dp"
-            android:text="@string/restartText"
-            android:textSize="18sp" />
-
-        <!-- Input on the right side -->
         <EditText
-            android:id="@+id/editText"
+            android:id="@+id/guessInput"
             android:layout_width="0dp"
             android:layout_height="60dp"
             android:layout_marginStart="10dp"
@@ -51,16 +72,42 @@
             android:inputType="text"
             android:textColorHint="@color/gui03"
             android:textSize="24sp" />
+
+        <Button
+            android:id="@+id/attemptedGuess"
+            android:layout_width="wrap_content"
+            android:layout_height="60dp"
+            android:text="@string/guessSubmissionBtnText"
+            android:textSize="18sp" />
     </LinearLayout>
 
     <TextView
-        android:id="@+id/textView2"
+        android:id="@+id/remainingTries"
         android:layout_width="90dp"
         android:layout_height="90dp"
-        android:layout_marginBottom="40dp"
+        android:text=""
+        android:textColor="@color/gui01"
+        android:textSize="40sp"
+        android:textStyle="bold"
+        android:textAlignment="center"
+        android:layout_marginBottom="76dp"
         android:background="@drawable/round_thing"
         app:layout_constraintBottom_toTopOf="@+id/linearLayout"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent" />
+        app:layout_constraintHorizontal_bias="0.498"
+        app:layout_constraintStart_toStartOf="parent"
+        android:gravity="center_vertical|center_horizontal" />
+
+    <TextView
+        android:id="@+id/answer"
+        android:layout_width="wrap_content"
+        android:textSize="30sp"
+        android:textStyle="bold"
+        android:layout_height="wrap_content"
+        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/remainingTries" />
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
