--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,7 +7,6 @@
     android:background="@color/gui00"
     tools:context=".MainActivity">
 
-
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -65,6 +64,7 @@
         <EditText
             android:id="@+id/guessInput"
             android:layout_width="0dp"
+            android:maxLength="4"
             android:layout_height="60dp"
             android:layout_marginStart="10dp"
             android:layout_weight="1"
@@ -103,12 +103,12 @@
         android:id="@+id/answer"
         android:layout_width="wrap_content"
         android:textSize="30sp"
+        android:letterSpacing="1.5"
         android:textStyle="bold"
         android:layout_height="wrap_content"
         app:layout_constraintBottom_toTopOf="@+id/linearLayout"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/remainingTries" />
-
 
 </androidx.constraintlayout.widget.ConstraintLayout>
