--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.coordinatorlayout.widget.CoordinatorLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -7,33 +8,301 @@
     android:background="@color/gui00"
     tools:context=".MainActivity">
 
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+
+    <!--    <include-->
+    <!--        layout="@layout/keyboard"-->
+    <!--        android:id="@+id/kewb"-->
+    <!--        android:layout_width="match_parent"-->
+    <!--        android:layout_marginHorizontal="4dp"-->
+    <!--        android:layout_height="0dp"-->
+    <!--        android:layout_marginBottom="10dp"-->
+    <!--        app:layout_constraintBottom_toBottomOf="parent"/>-->
+
+    <!--  This will end  -->
+    <!--    <RelativeLayout-->
+    <!--        android:id="@+id/relativeLayout"-->
+    <!--        android:layout_width="match_parent"-->
+    <!--        android:layout_height="wrap_content"-->
+    <!--        android:layout_marginTop="20dp"-->
+    <!--        android:paddingHorizontal="20dp"-->
+    <!--        app:layout_constraintTop_toBottomOf="@+id/textView"-->
+    <!--        tools:layout_editor_absoluteX="0dp">-->
+
+    <!--        &lt;!&ndash; Left TextView &ndash;&gt;-->
+    <!--        <TextView-->
+    <!--            android:id="@+id/guess"-->
+    <!--            android:layout_width="wrap_content"-->
+    <!--            android:layout_height="wrap_content"-->
+    <!--            android:layout_alignParentStart="true"-->
+    <!--            android:text=""-->
+    <!--            android:textColor="@color/gui02"-->
+    <!--            android:textSize="20sp" />-->
+
+    <!--        &lt;!&ndash; Right TextView &ndash;&gt;-->
+    <!--        <TextView-->
+    <!--            android:id="@+id/check"-->
+    <!--            android:layout_width="wrap_content"-->
+    <!--            android:layout_height="wrap_content"-->
+    <!--            android:layout_alignParentEnd="true"-->
+    <!--            android:text=""-->
+    <!--            android:textColor="@color/gui02"-->
+    <!--            android:textSize="20sp" />-->
+    <!--    </RelativeLayout>-->
+
     <RelativeLayout
+        android:id="@+id/relativeWordle"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="40dp"
-        android:paddingHorizontal="20dp"
-        app:layout_constraintTop_toBottomOf="@+id/textView"
-        tools:layout_editor_absoluteX="0dp">
+        android:layout_marginStart="50dp"
+        android:layout_marginEnd="50dp"
+        android:orientation="vertical"
+        app:layout_constraintBottom_toTopOf="@+id/remainingTries"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textView">
 
-        <!-- Left TextView -->
-        <TextView
-            android:textColor="@color/gui02"
-            android:id="@+id/guess"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:textSize="20sp"
-            android:layout_alignParentStart="true"
-            android:text="" />
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="70dp"
+            android:orientation="horizontal"
+            android:weightSum="4">
 
-        <!-- Right TextView -->
-        <TextView
-            android:textColor="@color/gui02"
-            android:id="@+id/check"
-            android:layout_width="wrap_content"
-            android:textSize="20sp"
-            android:layout_height="wrap_content"
-            android:layout_alignParentEnd="true"
-            android:text="" />
+            <EditText
+                android:id="@+id/edt_00"
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:layout_margin="4dp"
+                android:layout_weight="1"
+                android:background="@drawable/cells"
+                android:editable="false"
+                android:focusable="true"
+                android:focusableInTouchMode="true"
+                android:gravity="center"
+
+                android:inputType="none"
+                android:maxLength="1"
+                android:textSize="24sp"
+                android:textStyle="bold" />
+
+            <EditText
+                android:id="@+id/edt_01"
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:layout_margin="4dp"
+                android:layout_weight="1"
+                android:background="@drawable/cells"
+                android:editable="false"
+                android:focusable="true"
+                android:focusableInTouchMode="true"
+                android:gravity="center"
+
+                android:inputType="none"
+                android:maxLength="1"
+                android:textSize="24sp"
+                android:textStyle="bold" />
+
+            <EditText
+                android:id="@+id/edt_02"
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:layout_margin="4dp"
+                android:layout_weight="1"
+                android:background="@drawable/cells"
+                android:editable="false"
+                android:focusable="true"
+                android:focusableInTouchMode="true"
+                android:gravity="center"
+
+                android:inputType="none"
+                android:maxLength="1"
+                android:textSize="24sp"
+                android:textStyle="bold" />
+
+            <EditText
+                android:id="@+id/edt_03"
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:layout_margin="4dp"
+                android:layout_weight="1"
+                android:background="@drawable/cells"
+                android:editable="false"
+                android:focusable="true"
+                android:focusableInTouchMode="true"
+                android:gravity="center"
+
+                android:inputType="none"
+                android:maxLength="1"
+                android:textSize="24sp"
+                android:textStyle="bold" />
+
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="70dp"
+            android:layout_marginTop="70dp"
+            android:orientation="horizontal"
+            android:weightSum="4">
+
+            <EditText
+                android:id="@+id/edt_10"
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:layout_margin="4dp"
+                android:layout_weight="1"
+                android:background="@drawable/cells"
+                android:editable="false"
+                android:focusable="true"
+                android:focusableInTouchMode="true"
+                android:gravity="center"
+
+                android:inputType="none"
+                android:maxLength="1"
+                android:textSize="24sp"
+                android:textStyle="bold" />
+
+            <EditText
+                android:id="@+id/edt_11"
+                style="@style/Cell"
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:layout_weight="1"
+                android:editable="false"
+                android:focusable="true"
+                android:focusableInTouchMode="true"
+                android:inputType="none"/>
+
+            <EditText
+                android:id="@+id/edt_12"
+                style="@style/Cell"
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:layout_weight="1"
+                android:editable="false"
+                android:focusable="true"
+                android:focusableInTouchMode="true"
+                android:inputType="none"/>
+
+            <EditText
+                android:id="@+id/edt_13"
+                style="@style/Cell"
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:layout_weight="1"
+                android:editable="false"
+                android:focusable="true"
+                android:focusableInTouchMode="true"
+                android:inputType="none"/>
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="70dp"
+            android:layout_marginTop="140dp"
+            android:orientation="horizontal"
+            android:weightSum="4">
+
+            <EditText
+                android:id="@+id/edt_20"
+                style="@style/Cell"
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:layout_weight="1"
+                android:editable="false"
+                android:focusable="true"
+                android:focusableInTouchMode="true"
+                android:inputType="none"/>
+
+            <EditText
+                android:id="@+id/edt_21"
+                style="@style/Cell"
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:layout_weight="1"
+                android:editable="false"
+                android:focusable="true"
+                android:focusableInTouchMode="true"
+                android:inputType="none"/>
+
+            <EditText
+                android:id="@+id/edt_22"
+                style="@style/Cell"
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:layout_weight="1"
+                android:editable="false"
+                android:focusable="true"
+                android:focusableInTouchMode="true"
+                android:inputType="none"/>
+
+            <EditText
+                android:id="@+id/edt_23"
+                style="@style/Cell"
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:layout_weight="1"
+                android:editable="false"
+                android:focusable="true"
+                android:focusableInTouchMode="true"
+                android:inputType="none"/>
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="70dp"
+            android:layout_marginTop="210dp"
+            android:orientation="horizontal"
+            android:weightSum="4">
+
+            <EditText
+                android:id="@+id/edt_30"
+                style="@style/Cell"
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:layout_weight="1"
+                android:editable="false"
+                android:focusable="true"
+                android:focusableInTouchMode="true"
+                android:inputType="none"/>
+
+            <EditText
+                android:id="@+id/edt_31"
+                style="@style/Cell"
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:layout_weight="1"
+                android:editable="false"
+                android:focusable="true"
+                android:focusableInTouchMode="true"
+                android:inputType="none"/>
+
+            <EditText
+                android:id="@+id/edt_32"
+                style="@style/Cell"
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:layout_weight="1"
+                android:editable="false"
+                android:focusable="true"
+                android:focusableInTouchMode="true"
+                android:inputType="none"/>
+
+            <EditText
+                android:id="@+id/edt_33"
+                style="@style/Cell"
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:layout_weight="1"
+                android:editable="false"
+                android:focusable="true"
+                android:focusableInTouchMode="true"
+                android:inputType="none"/>
+        </LinearLayout>
+
     </RelativeLayout>
 
     <TextView
@@ -41,6 +310,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_centerHorizontal="true"
+        android:fontFamily="monospace"
         android:gravity="center"
         android:padding="10dp"
         android:text="@string/titleGame"
@@ -51,28 +321,40 @@
         app:layout_constraintHorizontal_bias="0.497"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.05" />
+        app:layout_constraintVertical_bias="0.023" />
+
+    <!-- Include first_layout.xml -->
+    <!--    <include layout="@layout/keyboard"/>-->
 
     <LinearLayout
         android:id="@+id/linearLayout"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="57dp"
+        android:layout_marginHorizontal="4dp"
         android:layout_marginBottom="16dp"
         android:orientation="horizontal"
-        app:layout_constraintBottom_toBottomOf="parent">
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/remainingTries"
+        app:layout_constraintVertical_bias="0.39">
 
         <EditText
             android:id="@+id/guessInput"
             android:layout_width="0dp"
-            android:maxLength="4"
             android:layout_height="60dp"
             android:layout_marginStart="10dp"
             android:layout_weight="1"
             android:autofillHints=""
+            android:focusable="true"
+            android:focusableInTouchMode="true"
             android:hint="@string/guessInputHint"
             android:inputType="text"
+            android:maxLength="4"
             android:textColorHint="@color/gui03"
-            android:textSize="24sp" />
+            android:textSize="24sp"
+            android:windowSoftInputMode="stateAlwaysHidden" />
 
         <Button
             android:id="@+id/attemptedGuess"
@@ -86,29 +368,55 @@
         android:id="@+id/remainingTries"
         android:layout_width="90dp"
         android:layout_height="90dp"
+        android:layout_marginTop="116dp"
+        android:background="@drawable/round_thing"
+        android:gravity="center_vertical|center_horizontal"
         android:text=""
+        android:textAlignment="center"
         android:textColor="@color/gui01"
         android:textSize="40sp"
         android:textStyle="bold"
-        android:textAlignment="center"
-        android:layout_marginBottom="76dp"
-        android:background="@drawable/round_thing"
-        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.498"
         app:layout_constraintStart_toStartOf="parent"
-        android:gravity="center_vertical|center_horizontal" />
+        app:layout_constraintTop_toBottomOf="@+id/relativeWordle" />
 
     <TextView
         android:id="@+id/answer"
         android:layout_width="wrap_content"
-        android:textSize="30sp"
-        android:letterSpacing="1.5"
-        android:textStyle="bold"
         android:layout_height="wrap_content"
+        android:letterSpacing="1.5"
+        android:textSize="30sp"
+        android:textStyle="bold"
         app:layout_constraintBottom_toTopOf="@+id/linearLayout"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/remainingTries" />
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+
+    </androidx.constraintlayout.widget.ConstraintLayout>
+
+
+        <com.google.android.material.bottomappbar.BottomAppBar
+            android:id="@+id/bottomAppBar"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_gravity="bottom"
+            app:fabCradleRoundedCornerRadius="50dp"
+            android:backgroundTint="@color/gui04"
+            app:fabCradleMargin="10dp"
+
+            >
+            <com.google.android.material.bottomnavigation.BottomNavigationView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:id="@+id/bottomNavView"
+                android:layout_marginEnd="20dp"
+                app:labelVisibilityMode="labeled"
+                android:background="@color/gui04"
+                app:menu="@menu/bottom_menu"/>
+
+        </com.google.android.material.bottomappbar.BottomAppBar>
+
+    </androidx.coordinatorlayout.widget.CoordinatorLayout>
+
+
