--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -3,7 +3,29 @@
     <style name="Base.Theme.Wordle" parent="Theme.Material3.DayNight.NoActionBar">
         <!-- Customize your light theme here. -->
         <!-- <item name="colorPrimary">@color/my_light_primary</item> -->
+        <item name="colorPrimary">@color/gui0B</item>
+        <item name="colorPrimaryVariant">#4C4CAA</item>
+        <item name="colorOnPrimary">@color/gui01</item>
+
+        <item name="colorSecondary">#4CAA97</item>
+        <item name="colorSecondaryVariant">#2A736D</item>
+        <item name="colorOnSecondary">#19513F</item>
+
+        <item name="android:statusBarColor">?attr/colorPrimaryVariant</item>
     </style>
 
     <style name="Theme.Wordle" parent="Base.Theme.Wordle" />
+
+    <style name="LargeFont">
+        <item name="android:textSize">40sp</item>
+    </style>
+
+    <style name="Cell">
+        <item name="android:background">@drawable/cells</item>
+        <item name="android:layout_margin">4dp</item>
+        <item name="android:gravity">center</item>
+        <item name="android:textSize">24sp</item>
+        <item name="android:textStyle">bold</item>
+        <item name="android:maxLength">1</item>
+    </style>
 </resources>
